--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Enter an ingrediant or food {% endblock %}
+{% block title %} Enter an ingredient or food {% endblock %}
 
 {% block content %}
 <form action="#" method="post">
