--- a/templates/index.html
+++ b/templates/index.html
@@ -8,4 +8,9 @@
   <p><input type="submit" value="submit" /></p>
 </form>
 
+<!-- <button onclick='href="Parsity/searches.json"'' type="button">
+  Past Searches
+</button> -->
+<a href="/searches">Past Searches</a>
+
 {% endblock %}
